# hotdoc

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
examples/docker/: docker.html  docker.md
examples/git/: git.html  git.md
hotdoc/: __init__.py  __main__.py  htmlutils.py
src/mddoc/: __main__.py  default.html
